--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -17,6 +17,9 @@ tap_install:
       # tls:
       #   namespace: tap-install
       #   secretName: tap-gui-cert-rehan
+      tls:
+        namespace: cert-manager
+        secretName: tap-gui 
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
