--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -14,12 +14,12 @@ tap_install:
           type: LoadBalancer # NodePort can be used if your Kubernetes cluster doesn't support LoadBalancing.
 
     tap_gui:
-      # tls:
-      #   namespace: tap-install
-      #   secretName: tap-gui-cert-rehan
       tls:
-        namespace: cert-manager
-        secretName: tap-gui 
+        namespace: tap-install
+        secretName: tap-gui-cert-rehan
+      # tls:
+      #   namespace: cert-manager
+      #   secretName: tap-gui 
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
@@ -37,9 +37,9 @@ tap_install:
 
     appliveview:
       ingressEnabled: true
-      # tls:
-      #   namespace: tap-install
-      #   secretName: tap-gui-cert-rehan
+      tls:
+        namespace: tap-install
+        secretName: tap-gui-cert-rehan
 
     metadata_store:
       ingress_enabled: "true"
