--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -45,6 +45,6 @@ tap_install:
       ingress_enabled: "true"
       app_service_type: "ClusterIP"
       ns_for_export_app_cert: "*"
-      # tls:
-      #   namespace: tap-install
-      #   secretName: tap-gui-cert-rehan
+      tls:
+        namespace: tap-install
+        secretName: tap-gui-cert-rehan
