--- a/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-supply-chain-overlay.yaml
+++ b/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-supply-chain-overlay.yaml
@@ -18,7 +18,7 @@ stringData:
     #@   return param
     #@ end
     
-    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain", "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain","metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
     ---
     spec:
       resources:
@@ -26,7 +26,7 @@ stringData:
       #@overlay/remove
       - name: source-tester
 
-    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain", "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain","metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
     ---
     spec:
       resources:
@@ -34,7 +34,7 @@ stringData:
       #@overlay/remove
       - name: source-scanner
 
-    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain", "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain","metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
     ---
     spec:
       resources:
@@ -77,7 +77,7 @@ stringData:
         default: main
 
 
-    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain", "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"apiVersion": "carto.run/v1alpha1", "kind": "ClusterSupplyChain","metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
     ---
     spec:
       resources:
@@ -85,7 +85,7 @@ stringData:
       #@overlay/remove
       - name: deliverable
 
-    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain"}), "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain"}), expects="0+"
     ---
     spec:
       resources:
@@ -111,7 +111,7 @@ stringData:
           name: config-writer-deliverable-template
 
 
-    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain"}), "metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
+    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain"}), expects="0+"
     ---
     spec:
       resources:
