--- a/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-supply-chain-overlay.yaml
+++ b/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-supply-chain-overlay.yaml
@@ -110,8 +110,7 @@ stringData:
           kind: ClusterTemplate
           name: config-writer-deliverable-template
 
-
-    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain"}), expects="0+"
+    #@overlay/match by=overlay.subset({"kind":"ClusterSupplyChain","metadata":{"name":"source-test-scan-to-url"}}), expects="0+"
     ---
     spec:
       resources:
