--- a/clusters/cg-run/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-run/cluster-config/values/tap-values.yaml
@@ -44,3 +44,8 @@ tap_install:
     api_auto_registration:
       tap_gui_url: "https://tap-gui.view.tap.raltaf.io"
       cluster_name: run
+    package_overlays:
+    - name: "delivery-basic"
+      secrets: 
+      - name: "ootb-cluster-delivery-overlay"
+ 
