--- a/clusters/cg-run/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-run/cluster-config/values/tap-values.yaml
@@ -45,7 +45,7 @@ tap_install:
       tap_gui_url: "https://tap-gui.view.tap.raltaf.io"
       cluster_name: run
     package_overlays:
-    - name: "delivery-basic"
+    - name: "ootb-delivery-basic"
       secrets: 
       - name: "ootb-cluster-delivery-overlay"
  
