--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
@@ -28,3 +28,6 @@ stringData:
         templateRef:
           kind: ClusterSourceTemplate
           name: delivery-source-template
+        sources:
+        - resource: deployer
+          name: source
