--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
@@ -24,7 +24,7 @@ stringData:
       resources:
       #@overlay/match by="name", expects="0+"
       #@overlay/append
-      - name: end-to-end-testing
+      - name: e2e-test
         templateRef:
           kind: ClusterSourceTemplate
           name: delivery-source-template
