--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/ootb-cluster-delivery-overlay.yaml
@@ -26,8 +26,8 @@ stringData:
       #@overlay/append
       - name: e2e-test
         templateRef:
-          kind: ClusterSourceTemplate
-          name: delivery-source-template
+          kind: ClusterTemplate
+          name: e2e-testing-cluster-template
         sources:
         - resource: deployer
           name: source
