adding run tempalte

--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/sa-tekton-clusterrolebinding.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/sa-tekton-clusterrolebinding.yaml
@@ -1,8 +1,9 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: sa-tekton-clusterrolebinding
+  name: sa-tekton-rolebinding
+  namespace: dev
 subjects:
 - kind: ServiceAccount
   namespace: dev
