task in right place

--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-task.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-task.yaml
@@ -2,7 +2,7 @@ apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
   name: tekton-e2e-testing-taskrun
-  namespace: default
+  namespace: dev
   annotations:
     tekton.dev/pipelines.minVersion: "0.12.1"
     tekton.dev/categories: Security
