--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
@@ -18,13 +18,26 @@ spec:
     #@ load("@ytt:data", "data")
     #@ load("@ytt:json", "json")
 
+    #@ def merge_labels(fixed_values):
+    #@   labels = {}
+    #@   if hasattr(data.values.workload.metadata, "labels"):
+    #@     exclusions = ""
+    #@     for k,v in dict(data.values.workload.metadata.labels).items():
+    #@       if k not in exclusions:
+    #@         labels[k] = v
+    #@       end
+    #@     end
+    #@   end
+    #@   labels.update(fixed_values)
+    #@   return labels
+    #@ end
+
     ---
     apiVersion: carto.run/v1alpha1
     kind: Runnable
     metadata:
       name: #@ data.values.workload.metadata.name + "-e2e-testing"
-      labels: 
-        "app.kubernetes.io/component": "e2e-testing" 
+      labels: #@ merge_labels({ "app.kubernetes.io/component": "e2e-testing" })
     spec:
       #@ if/end hasattr(data.values.workload.spec, "serviceAccountName"):
       serviceAccountName: #@ data.values.workload.spec.serviceAccountName
