--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-task.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-task.yaml
@@ -15,10 +15,10 @@ spec:
       image:  registry.harbor.learn.tapsme.org/library/alpine-curl-jq@sha256:9d6c9b8d08e8cc17acf67b514706561265b26d0ced7a8d4f891f421d6ed476f7
       script: |
         #!/usr/bin/env bash
-        sleep 30;
-        result="$(curl -I -s https://tanzu-java-web-app-dev.run.tap.raltaf.io | head -n 1|cut -d$' ' -f2)"
+
+        result="$(curl -I -s https://www.google.com | head -n 1|cut -d$' ' -f2)"
         echo $result
-        if [[ ${result} == "200" ]]; then
+        if [[ ${result} == "100" ]]; then
           echo "e2e-testing::PASSED"
         else
           echo "e2e-testing::FAILED"
