--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
@@ -11,30 +11,12 @@ spec:
       default: default
   healthRule:
     singleConditionType: Ready
+  lifecycle: tekton
 
   
-  #@yaml/text-templated-strings
-  ytt: |
-    #@ load("@ytt:data", "data")
-    #@ load("@ytt:json", "json")
-
-    #@ def merge_labels(fixed_values):
-    #@   labels = {}
-    #@   if hasattr(data.values.workload.metadata, "labels"):
-    #@     exclusions = ""
-    #@     for k,v in dict(data.values.workload.metadata.labels).items():
-    #@       if k not in exclusions:
-    #@         labels[k] = v
-    #@       end
-    #@     end
-    #@   end
-    #@   labels.update(fixed_values)
-    #@   return labels
-    #@ end
-
-    ---
+  template:
     apiVersion: carto.run/v1alpha1
-    kind: Runnable
+    kind: Task
     metadata:
       name: #@ data.values.workload.metadata.name + "-e2e-testing"
       labels: #@ merge_labels({ "app.kubernetes.io/component": "e2e-testing" })
@@ -42,9 +24,8 @@ spec:
       #@ if/end hasattr(data.values.workload.spec, "serviceAccountName"):
       serviceAccountName: #@ data.values.workload.spec.serviceAccountName
 
-      runTemplateRef:
-        name: tekton-e2e-testing-run-template
-
+      taskRef:
+        name: tekton-e2e-testing-taskrun
       inputs:
         serviceAccount: #@ data.values.params.serviceAccount
         taskRef:
