--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
@@ -13,7 +13,7 @@ spec:
   
   template:
     apiVersion: carto.run/v1alpha1
-    kind: Task
+    kind: TaskRun
     metadata:
       name: -e2e-testing   
     spec:
