--- a/clusters/cg-view/tanzu-sync/app/values/tanzu-sync-aws-secrets-manager-values.yaml
+++ b/clusters/cg-view/tanzu-sync/app/values/tanzu-sync-aws-secrets-manager-values.yaml
@@ -7,13 +7,13 @@ secrets:
         role_arn: arn:aws:iam::017529031426:role/ra-tap-view--tanzu-sync-secrets
     remote_refs:
       sync_git:
-        # TODO: Fill in your configuration for ssh or basic auth here (see tanzu-sync/app/config/.tanzu-managed/schema--eso.yaml)
-        ssh_private_key:
-          key: dev/ra-tap-view/tanzu-sync/sync-git-ssh
-          property: ssh-privatekey
-        ssh_known_hosts:
-          key: dev/ra-tap-view/tanzu-sync/sync-git-ssh
-          property: ssh-knownhosts        
+        ssh:
+          private_key:
+            key: dev/ra-tap-view/tanzu-sync/sync-git-ssh
+            property: ssh-privatekey
+          known_hosts:
+            key: dev/ra-tap-view/tanzu-sync/sync-git-ssh
+            property: ssh-knownhosts        
       install_registry_dockerconfig:
         dockerconfigjson:
           key: dev/ra-tap-view/tanzu-sync/install-registry-dockerconfig
