--- a/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/schema--eso.yaml
+++ b/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/schema--eso.yaml
@@ -5,8 +5,10 @@ tap_install:
   #@schema/title "TAP installation Secrets"
   secrets:
     #@schema/title "ESO Secrets"
+    #@schema/validation one_not_null=["aws", "vault"]
     eso:
       #@schema/title "ESO Provider configuration for AWS"
+      #@schema/nullable
       aws:
         #@schema/desc "AWS region which hosts the Secrets Manager instance hosting Tanzu Sync secrets."
         #@schema/validation min_len=1
@@ -18,6 +20,27 @@ tap_install:
           #@schema/desc "Amazon Resource Name for the Identity and Access Management Role for which IRSA has been configured."
           #@schema/validation min_len=1
           role_arn: ""
+      #@schema/title "ESO Provider configuration for vault"
+      #@schema/nullable
+      vault:
+        #@schema/desc "Vault server hosting Tanzu Sync secrets."
+        #@schema/validation min_len=1
+        server: ""
+        #@schema/desc "Mount path of the Vault KV backend endpoint, used as a path prefix for the external secret key"
+        path: "secret"
+        #@schema/desc "Vault enterprise namespace"
+        namespace: ""
+        #@schema/desc "Vault KV secret engine version"
+        version: "v2"
+        #@schema/title "Authentication configuration for Vault"
+        auth:
+          #@schema/desc "Kubernetes auth configuration (see https://www.vaultproject.io/docs/auth/kubernetes)"
+          kubernetes:
+            #@schema/desc "Mount path of the kubernetes secrets engine"
+            mountPath: "kubernetes"
+            #@schema/desc "Vault role with permissions to read TAP secrets"
+            #@schema/validation min_len=1
+            role: "tanzu-sync-vault-role"
 
       #@schema/title "ESO External Secrets Remote References"
       #@schema/desc "Collection of ESO remote references (i.e. ExternalSecret data[].remoteRef) describing the location and disposition of sensitive data."
