--- a/clusters/cg-build/tanzu-sync/app/config/.tanzu-managed/sync.yaml
+++ b/clusters/cg-build/tanzu-sync/app/config/.tanzu-managed/sync.yaml
@@ -8,12 +8,11 @@ metadata:
   namespace: tanzu-sync
   annotations:
     kapp.k14s.io/change-group: tanzu-sync
-    kapp.k14s.io/change-rule.0: "upsert after upserting se/sync-git-ssh"
-    kapp.k14s.io/change-rule.1: "upsert after upserting tanzu-sync-secrets"
-    kapp.k14s.io/change-rule.2: "upsert after upserting install-registry-export"
+    kapp.k14s.io/change-rule.0: "upsert after upserting tanzu-sync-secrets"
+    kapp.k14s.io/change-rule.1: "upsert after upserting install-registry-export"
     #! if registry credentials are deleted before sync-managed software is removed, uninstall can be slow or fail.
-    kapp.k14s.io/change-rule.3: "delete before deleting tanzu-sync-secrets"
-    kapp.k14s.io/change-rule.4: "delete before deleting install-registry-export"
+    kapp.k14s.io/change-rule.2: "delete before deleting tanzu-sync-secrets"
+    kapp.k14s.io/change-rule.3: "delete before deleting install-registry-export"
 spec:
   serviceAccountName: sync-sa
   fetch:
@@ -21,7 +20,7 @@ spec:
         url: #@ data.values.git.url
         ref: #@ data.values.git.ref
         secretRef:
-          name: sync-git-ssh
+          name: sync-git
         subPath: #@ data.values.git.sub_path
   template:
     - ytt:
