--- a/clusters/cg-build/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-build/cluster-config/values/tap-values.yaml
@@ -55,7 +55,7 @@ tap_install:
           ref: origin/main
           subPath: credentials
           secretRef:
-            name: sync-git-ssh-3
+            name: sync-git-3
             namespace: tanzu-sync
             create_export: true
         path: _ytt_lib/workload-creds
@@ -64,7 +64,7 @@ tap_install:
           ref: origin/main
           subPath: additional_resources
           secretRef:
-            name: sync-git-ssh-2
+            name: sync-git-2
             namespace: tanzu-sync
             create_export: true
         path: _ytt_lib/workload-additional-resources
@@ -73,7 +73,7 @@ tap_install:
         ref: origin/main
         subPath: ns-provisioner
         secretRef:
-          name: sync-git-ssh
+          name: sync-git
           namespace: tanzu-sync
           # create_export: true
       import_data_values_secrets:
