--- a/clusters/cg-run/tanzu-sync/app/config/.tanzu-managed/pkgr.yaml
+++ b/clusters/cg-run/tanzu-sync/app/config/.tanzu-managed/pkgr.yaml
@@ -10,4 +10,4 @@ metadata:
 spec:
   fetch:
     imgpkgBundle:
-      image: registry.harbor.learn.tapsme.org/tap/tap-packages:1.7.0-build.10
+      image: #@ "{}:{}".format(data.values.tap_package_repository.oci_repository, data.values.tap_install.version.package_repo_bundle_tag)
