--- a/clusters/cg-run/tanzu-sync/app/values/tanzu-sync-aws-secrets-manager-values.yaml
+++ b/clusters/cg-run/tanzu-sync/app/values/tanzu-sync-aws-secrets-manager-values.yaml
@@ -6,13 +6,14 @@ secrets:
       tanzu_sync_secrets:
         role_arn: arn:aws:iam::017529031426:role/ra-tap-run--tanzu-sync-secrets
     remote_refs:
-      sync_git_ssh:
-        ssh_private_key:
-          key: dev/ra-tap-run/tanzu-sync/sync-git-ssh
-          property: ssh-privatekey
-        ssh_known_hosts:
-          key: dev/ra-tap-run/tanzu-sync/sync-git-ssh
-          property: ssh-knownhosts
+      sync_git:
+        ssh:
+          private_key:
+            key: dev/ra-tap-run/tanzu-sync/sync-git-ssh
+            property: ssh-privatekey
+          known_hosts:
+            key: dev/ra-tap-run/tanzu-sync/sync-git-ssh
+            property: ssh-knownhosts    
       install_registry_dockerconfig:
         dockerconfigjson:
           key: dev/ra-tap-run/tanzu-sync/install-registry-dockerconfig
