u[pdated git user

--- a/additional_resources/sync-ssh-git-secretimport.yaml
+++ b/additional_resources/sync-ssh-git-secretimport.yaml
@@ -4,7 +4,7 @@
 apiVersion: secretgen.carvel.dev/v1alpha1
 kind: SecretImport
 metadata:
-  name: sync-git-ssh
+  name: sync-git
   annotations:
   tekton.dev/git-0: github.com
 spec:
