--- a/clusters/cg-build/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-build/cluster-config/values/tap-values.yaml
@@ -3,7 +3,17 @@ tap_install:
   values:
     profile: build
     ceip_policy_disclosed: true
-
+    amr:
+      observer:
+        cloudevent_handler:
+          endpoint: "https://amr-cloudevent-handler.view.tap.raltaf.io"
+          liveness_period_seconds: 10
+        auth:
+          kubernetes_service_accounts:
+            enable: true
+            autoconfigure: true
+            secret:
+              ref: "amr-observer-editor-token"
     shared:
       ingress_domain: build.tap.raltaf.io
       image_registry:  
