--- a/clusters/cg-run/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-run/cluster-config/values/tap-values.yaml
@@ -2,7 +2,18 @@
 tap_install:
   values:
     profile: run
-    ceip_policy_disclosed: true 
+    ceip_policy_disclosed: true
+    amr:
+      observer:
+        cloudevent_handler:
+          endpoint: "https://amr-cloudevent-handler.view.tap.raltaf.io"
+          liveness_period_seconds: 10
+        auth:
+          kubernetes_service_accounts:
+            enable: true
+            autoconfigure: true
+            secret:
+              ref: "amr-observer-editor-token"     
     shared:
       ingress_domain: run.tap.raltaf.io
       ingress_issuer: letsencrypt-production
