--- a/clusters/cg-view/cluster-config/values/tap-values.yaml
+++ b/clusters/cg-view/cluster-config/values/tap-values.yaml
@@ -23,6 +23,8 @@ tap_install:
       metadataStoreAutoconfiguration: true
       service_type: ClusterIP
       app_config:
+        auth:
+          allowGuestAccess: true
         app:
           baseUrl: https://tap-gui.view.tap.raltaf.io
         catalog:
