--- a/clusters/cg-build/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
@@ -36,7 +36,7 @@ metadata:
   namespace: amr-observer-system
 spec:
   secretStoreRef:
-    name: tenant-cluster-secret-store
+    name: cluster-secret-store
     kind: ClusterSecretStore
   refreshInterval: "1m"
   target:
