updateed rbac, fixed run for amr

--- a/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
+++ b/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
@@ -36,7 +36,7 @@ metadata:
   namespace: amr-observer-system
 spec:
   secretStoreRef:
-    name: tenant-cluster-secret-store
+    name: cluster-secret-store
     kind: ClusterSecretStore
   refreshInterval: "1m"
   target:
@@ -50,7 +50,7 @@ spec:
   data:
   - secretKey: amr_observer_ca_crt
     remoteRef:
-      key: dedev/ra-tap-build/tap/tenant-install-secrets
+      key: dev/ra-tap-build/tap/tenant-install-secrets
       property: amr_observer_ca_crt
   - secretKey: amr_observer_auth_token
     remoteRef:
