--- a/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -122,3 +122,10 @@ rules:
   resources:
   - resourceinspectiongrants
   verbs: ['get', 'watch', 'list', 'create']
+- apiGroups: ['app-scanning.apps.tanzu.vmware.com']
+  resources:
+  - imagevulnerabilityscans
+  verbs: ['get', 'watch', 'list']
+- apiGroups: ['apiextensions.k8s.io']
+  resources: ['customresourcedefinitions']
+  verbs: ['get', 'watch', 'list']  
