--- a/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
+++ b/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
@@ -1,3 +1,7 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: amr-observer-system
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
