--- a/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-templates-overlay.yaml
+++ b/clusters/cg-build/cluster-config/config/tap-install/.tanzu-managed/ootb-templates-overlay.yaml
@@ -18,4 +18,4 @@ stringData:
     kind: ClusterConfigTemplate
     spec:
       #@overlay/match missing_ok=True
-      configPath: .spec.inputs.params
+      configPath: .data
