--- a/clusters/cg-build/cluster-config/post-install/clustertemplate-configwriter-deliverable.yaml
+++ b/clusters/cg-build/cluster-config/post-install/clustertemplate-configwriter-deliverable.yaml
@@ -125,46 +125,65 @@ spec:
     #@   return param("registry")["ca_cert_data"]
     #@ end
 
+    #@ if is_gitops():
     ---
-    apiVersion: carto.run/v1alpha1
-    kind: Runnable
+    apiVersion: tekton.dev/v1beta1
+    kind: TaskRun
     metadata:
-      name: #@ data.values.workload.metadata.name + "-deliverable-config-writer"
+      generateName: #@ data.values.workload.metadata.name + "deliverable-config-writer-"
       labels: #@ merge_labels({ "app.kubernetes.io/component": "config-writer" })
     spec:
-      #@ if/end hasattr(data.values.workload.spec, "serviceAccountName"):
-      serviceAccountName: #@ data.values.workload.spec.serviceAccountName
-
-      runTemplateRef:
-        name: tekton-taskrun
-
-      inputs:
-        serviceAccount: #@ data.values.params.serviceAccount
-        taskRef:
-          kind: ClusterTask
-          name: #@ "git-writer" if is_gitops() else "image-writer"
+      serviceAccountName: #@ data.values.params.serviceAccount
+      params:
+        - name: git_repository
+          value: #@ git_repository()
+        - name: git_branch
+          value: #@ param("gitops_branch")
+        - name: git_user_name
+          value: #@ param("gitops_user_name")
+        - name: git_user_email
+          value: #@ param("gitops_user_email")
+        - name: git_commit_message
+          value: #@ param("gitops_commit_message")
+        - name: git_files
+          value: #@ base64.encode(json.encode(data.values.config))
+        #@ if/end is_monorepo_approach():
+        - name: sub_path
+          value: #@ "config/" + data.values.workload.metadata.namespace + "/" + data.values.workload.metadata.name
+      taskRef:
+        resolver: cluster
         params:
-          #@ if is_gitops():
-          - name: git_repository
-            value: #@ git_repository()
-          - name: git_branch
-            value: #@ param("gitops_branch")
-          - name: git_user_name
-            value: #@ param("gitops_user_name")
-          - name: git_user_email
-            value: #@ param("gitops_user_email")
-          - name: git_commit_message
-            value: #@ param("gitops_commit_message")
-          - name: git_files
-            value: #@ base64.encode(json.encode(data.values.config))
-          #@ if/end is_monorepo_approach():
-          - name: sub_path
-            value: #@ "config/" + data.values.workload.metadata.namespace + "/" + data.values.workload.metadata.name
-          #@ else:
-          - name: files
-            value: #@ base64.encode(json.encode(data.values.config))
-          - name: bundle
-            value: #@ image()
-          - name: ca_cert_data
-            value: #@ ca_cert_data()
-          #@ end
+          - name: kind
+            value: task
+          - name: namespace
+            value: tap-tasks
+          - name: name
+            value: git-writer
+
+    #@ else:
+    ---
+    apiVersion: tekton.dev/v1beta1
+    kind: TaskRun
+    metadata:
+      generateName: #@ data.values.workload.metadata.name + "deliverable-config-writer-"
+      labels: #@ merge_labels({ "app.kubernetes.io/component": "config-writer" })
+    spec:
+      serviceAccountName: #@ data.values.params.serviceAccount
+      params:
+        - name: files
+          value: #@ base64.encode(json.encode(data.values.config))
+        - name: bundle
+          value: #@ image()
+        - name: ca_cert_data
+          value: #@ ca_cert_data()
+      taskRef:
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: namespace
+            value: tap-tasks
+          - name: name
+            value: image-writer
+
+    #@ end
