--- a/tanzu-java-web-app-workload.yaml
+++ b/tanzu-java-web-app-workload.yaml
@@ -17,6 +17,7 @@ spec:
       autoscaling.knative.dev/minScale: "1"
   source:
     git:
-      url: ssh://git@github.com/pakiheart/tanzu-java-web-app
+      url: ssh://git@github.com/vmware-tanzu/application-accelerator-samples
       ref:
         branch: main
+    subPath: tanzu-java-web-app
