--- a/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
+++ b/clusters/cg-run/cluster-config/post-install/amr-cloudevent-handler-edit-rbac.yaml
@@ -44,8 +44,8 @@ spec:
         annotations:
           kubernetes.io/service-account.name: amr-observer
       data:
-        ca.crt: "{{ .amr_observer_ca_crt | b64dec }}"
-        token: "{{ .amr_observer_auth_token | b64dec }}"
+        ca.crt: "{{ .amr_observer_ca_crt }}"
+        token: "{{ .amr_observer_auth_token }}"
   data:
   - secretKey: amr_observer_ca_crt
     remoteRef:
