run to look at main

--- a/clusters/cg-run/cluster-config/post-install/deliverable-app-reconciler.yaml
+++ b/clusters/cg-run/cluster-config/post-install/deliverable-app-reconciler.yaml
@@ -24,7 +24,7 @@ spec:
               source:
                 git:
                   ref:
-                    branch: run   
+                    branch: main   
   deploy:
   - kapp:
       rawOptions:
