--- a/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
+++ b/clusters/cg-run/cluster-config/config/tap-install/.tanzu-managed/e2e-testing-cluster-template.yaml
@@ -11,6 +11,7 @@ spec:
       default: default
   healthRule:
     singleConditionType: Ready
+  lifecycle: tekton    
 
   
   #@yaml/text-templated-strings
@@ -32,21 +33,20 @@ spec:
     #@   return labels
     #@ end
 
-    ---
-    apiVersion: carto.run/v1alpha1
-    kind: Runnable
+  ---
+    apiVersion: tekton.dev/v1beta1
+    kind: TaskRun
     metadata:
-      name: #@ data.values.workload.metadata.name + "-e2e-testing"
+      generateName: #@ data.values.workload.metadata.name + "e2e-testing"
       labels: #@ merge_labels({ "app.kubernetes.io/component": "e2e-testing" })
     spec:
-      #@ if/end hasattr(data.values.workload.spec, "serviceAccountName"):
-      serviceAccountName: #@ data.values.workload.spec.serviceAccountName
-
-      runTemplateRef:
-        name: tekton-e2e-testing-run-template
-
-      inputs:
-        serviceAccount: #@ data.values.params.serviceAccount
-        taskRef:
-          kind: ClusterTask
-          name: e2e-testing-clustertask
+      serviceAccountName: #@ data.values.params.serviceAccount
+      taskRef:
+        resolver: cluster
+        params:
+          - name: kind
+            value: task
+          - name: namespace
+            value: dev
+          - name: name
+            value: tekton-e2e-testing-taskrun
