--- a/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -126,11 +126,11 @@ rules:
   resources:
   - imagevulnerabilityscans
   verbs: ['get', 'watch', 'list']
-- apiGroups: apiextensions.k8s.io
+- apiGroups: ['apiextensions.k8s.io']
   resources:
   - customresourcedefinitions
   verbs: ['get', 'watch', 'list']  
-- apiGroups: scanning.apps.tanzu.vmware.com
+- apiGroups: [;scanning.apps.tanzu.vmware.com']
   resources:
   - scantemplates
   verbs: ['get', 'watch', 'list'] 
