--- a/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -130,7 +130,7 @@ rules:
   resources:
   - customresourcedefinitions
   verbs: ['get', 'watch', 'list']  
-- apiGroups: [;scanning.apps.tanzu.vmware.com']
+- apiGroups: ['scanning.apps.tanzu.vmware.com']
   resources:
   - scantemplates
   verbs: ['get', 'watch', 'list'] 
