more scope needed

--- a/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -133,4 +133,8 @@ rules:
 - apiGroups: ['scanning.apps.tanzu.vmware.com']
   resources:
   - scantemplates
-  verbs: ['get', 'watch', 'list'] 
+  verbs: ['get', 'watch', 'list']
+- apiGroups: ['app-scanning.apps.tanzu.vmware.com']
+  resources:
+  - imagevulnerabilityscans
+  verbs: ['get', 'watch', 'list']   
