more scope needed

--- a/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-build/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -137,4 +137,8 @@ rules:
 - apiGroups: ['app-scanning.apps.tanzu.vmware.com']
   resources:
   - imagevulnerabilityscans
-  verbs: ['get', 'watch', 'list']   
+  verbs: ['get', 'watch', 'list']
+- apiGroups: ['kpack.io']
+  resources:
+  - builds
+  verbs: ['get', 'watch', 'list']  
