--- a/clusters/cg-run/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
+++ b/clusters/cg-run/cluster-config/post-install/tap-gui-viewer-service-account-rbac.yaml
@@ -101,7 +101,7 @@ rules:
   - sourcescans
   - imagescans
   - scanpolicies
-  verbs: ['get', 'watch', 'list']
+  verbs: ['get' , 'watch', 'list']
 - apiGroups: ['tekton.dev']
   resources:
   - taskruns
@@ -138,3 +138,7 @@ rules:
   resources:
   - imagevulnerabilityscans
   verbs: ['get', 'watch', 'list']
+- apiGroups: ['kpack.io']
+  resources:
+  - builds
+  verbs: ['get', 'watch', 'list']  
