--- a/additional_resources/rolebinding.yaml
+++ b/additional_resources/rolebinding.yaml
@@ -1,3 +1,5 @@
+#@ load("@ytt:data", "data")
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -22,5 +24,5 @@ roleRef:
   name: app-editor-cluster-access
 subjects:
 - apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: #@ ns.name
+  kind: Group
+  name: Group- + #@ data.values.name
