--- a/additional_resources/rolebinding.yaml
+++ b/additional_resources/rolebinding.yaml
@@ -25,4 +25,4 @@ roleRef:
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
-  name: Group- + #@ data.values.name
+  name: #@ data.values.name
