--- a/additional_resources/rolebinding.yaml
+++ b/additional_resources/rolebinding.yaml
@@ -4,24 +4,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: app-editor
-  namespace: $DEVELOPER_NAMSPACE
+  namespace: #@ data.values.name
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: app-editor
-subjects:
-- apiGroup: rbac.authorization.k8s.io
-  kind: User
-  name: developer-1
----
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
-metadata:
-  name: app-editor-cluster-access
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: app-editor-cluster-access
 subjects:
 - apiGroup: rbac.authorization.k8s.io
   kind: Group
