--- a/ns-provisioner/desired-namespaces.yaml
+++ b/ns-provisioner/desired-namespaces.yaml
@@ -3,11 +3,11 @@
 namespaces:
 #! The only required parameter is the name of the namespace. All additional values provided here 
 #! for a namespace will be available under data.values for templating additional sources
-- name: dev-ns
+- name: dev
   scanpolicies: ["scan-policy"]
   pipelines: ["java"]
   rolebinding: ["dev-ns"]
-- name: rehan-ns
+- name: rehan
   scanpolicies: ["scan-policy"]
   pipelines: ["java"]
 - name: test
